--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -27,7 +27,7 @@
               <form>
                  <div class="form-group">
                     <label>Email</label>
-                    <input type="text" class="form-control" placeholder="User Name">
+                    <input type="text" class="form-control" placeholder="Email">
                  </div>
                  <div class="form-group">
                     <label>Password</label>
